Basic routes WIP

--- a/app/views/v1/basic-like-dogs.html
+++ b/app/views/v1/basic-like-dogs.html
@@ -8,7 +8,7 @@
 
 <!-- Set the page title -->
 {% block pageTitle %}
-Basic routing
+Like dogs
 {% endblock %}
 
 <!-- For adding a breadcrumb -->
@@ -29,19 +29,8 @@ Basic routing
 <div class="nhsuk-grid-row">
 	<div class="nhsuk-grid-column-two-thirds">
 		<h1>
-			Basic routing
+			Like dogs
 		</h1>
-
-		<p>For the next part of this tutorial, we will look at basic routing using a very basic 'if statement' - how to route a user dependent on their answer using a radio button.</p>
-		<p>Radio buttons aren't the only component we can use in conjunction with if statements, but we will touch on other components during the 'complex routing' section of this tutorial.</p>
-		<p>Firstly we will show you the journey, then break down the steps to reproduce it.</p>
-		<a href="basic-routing-radio" role="button" class="nhsuk-button nhsuk-u-margin-bottom-0">
-			Start basic journey
-		</a>
-		{{ pagination({
-			"previousUrl": "/v1/setting-up-routes",
-			"previousPage": "Setting up your routes file for iterations"
-		  }) }}
     </div>  
 </div>
 {% endblock %}
