--- a/app/views/v1/basic-routing-radio.html
+++ b/app/views/v1/basic-routing-radio.html
@@ -28,7 +28,7 @@ Basic routing - Do you like dogs?
 
 <div class="nhsuk-grid-row">
 	<div class="nhsuk-grid-column-two-thirds">
-		<form action="/v1/basic-routing-radio" method="post">
+		<form action="basic-routing-radio" method="post">
 			<div class="nhsuk-form-group">
 				<fieldset class="nhsuk-fieldset">
 					<legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--xl">
@@ -39,14 +39,14 @@ Basic routing - Do you like dogs?
 				
 					<div class="nhsuk-radios">
 						<div class="nhsuk-radios__item">
-							<input class="nhsuk-radios__input" id="radio-yes" name="basicDogs" type="radio" value="yes">
+							<input class="nhsuk-radios__input" id="radio-yes" name="basicDogst" type="radio" value="yes">
 							<label class="nhsuk-label nhsuk-radios__label" for="radio-yes">
 								Yes
 							</label>
 						</div>
 				
 						<div class="nhsuk-radios__item">
-							<input class="nhsuk-radios__input" id="radio-no" name="basicDogs" type="radio" value="no">
+							<input class="nhsuk-radios__input" id="radio-no" name="basicDogst" type="radio" value="no">
 							<label class="nhsuk-label nhsuk-radios__label" for="radio-no">
 								No
 							</label>
