Further fixes to iterating routes

--- a/app/views/v1/basic-routing-radio.html
+++ b/app/views/v1/basic-routing-radio.html
@@ -39,14 +39,14 @@ Basic routing - Do you like dogs?
 				
 					<div class="nhsuk-radios">
 						<div class="nhsuk-radios__item">
-							<input class="nhsuk-radios__input" id="radio-yes" name="basicDogst" type="radio" value="yes">
+							<input class="nhsuk-radios__input" id="radio-yes" name="basicDogs" type="radio" value="yes">
 							<label class="nhsuk-label nhsuk-radios__label" for="radio-yes">
 								Yes
 							</label>
 						</div>
 				
 						<div class="nhsuk-radios__item">
-							<input class="nhsuk-radios__input" id="radio-no" name="basicDogst" type="radio" value="no">
+							<input class="nhsuk-radios__input" id="radio-no" name="basicDogs" type="radio" value="no">
 							<label class="nhsuk-label nhsuk-radios__label" for="radio-no">
 								No
 							</label>
