Updated content for setting up routes

--- a/app/views/v1/setting-up-routes.html
+++ b/app/views/v1/setting-up-routes.html
@@ -61,9 +61,9 @@ Setting up your routes file for iterations
 
         <p>For those that haven't seen the keyword of <code>const</code> before - this is used to declare a variable that cannot be reassigned a new value, so for the above example I never want the varaible of <code>versionOne</code> to ever reference another file other than the one I assigned it to. Which in this case is the file we created earlier <code>app/views/v1/routes.js</code>.</p>
         <p>You can name your variables whatever you like (almost - some words are reserved) however it is best practice to name them something relevant so your code is easier to read and makes sense in the event someone else needs to work on your prototype.</p>
-        <p>The next line of code is essentially saying, when we requesting v1 of the prototype, use the routes file we assigned to <code>versionOne</code> - for every subsequent iteration we can copy the block of code and tweak accordingly (v1 to v2, versionOne to versionTwo etc.)</p>
+        <p>The next line of code is essentially saying, when we are requesting v1 of the prototype, use the routes file we assigned to <code>versionOne</code> - for every subsequent iteration we can copy the block of code and tweak accordingly (v1 to v2, versionOne to versionTwo etc.)</p>
         <p>Here is an example of how your <code>app/routes.js</code> file might look after a couple of iterations:</p>
-        <img src="/images/routes-3.svg" alt="routes file example" class="nhsuk-u-margin-bottom-4">
+        <img src="/images/routes-3.svg" alt="routes file example" class="nhsuk-u-margin-bottom-0">
 
 		{{ pagination({
 			"previousUrl": "/v1/what-is-routing",
