Content tweaks throughout

--- a/app/views/v1/basic-like-dogs.html
+++ b/app/views/v1/basic-like-dogs.html
@@ -28,9 +28,15 @@ Like dogs
 
 <div class="nhsuk-grid-row">
 	<div class="nhsuk-grid-column-two-thirds">
+		{{ backLink({
+			"href": "basic-routing-radio",
+			"text": "Go back"
+		  }) }}
 		<h1>
-			Like dogs
+			You like dogs
 		</h1>
+		<p>Thank you for letting us know.</p>
+		<a href="basic-routing-part-two" class="nhsuk-button">Continue</a>
     </div>  
 </div>
 {% endblock %}
