--- a/app/views/v1/basic-routing.html
+++ b/app/views/v1/basic-routing.html
@@ -30,6 +30,7 @@ Basic routing
 	<div class="nhsuk-grid-column-two-thirds">
 		<h1>
 			Basic routing
+			<span class="nhsuk-caption-xl nhsuk-caption--bottom">Part 1 of 2</span>
 		</h1>
 
 		<p>For the next part of this tutorial, we will look at basic routing using a very basic 'if statement' - how to route a user dependent on their answer using a radio button.</p>
