--- a/app/views/v1/setting-up-routes.html
+++ b/app/views/v1/setting-up-routes.html
@@ -69,7 +69,7 @@ Setting up your routes file for iterations
 			"previousUrl": "/v1/what-is-routing",
 			"previousPage": "What is routing and when to use it",
 			"nextUrl": "/v1/basic-routing",
-			"nextPage": "Basic routing"
+			"nextPage": "Basic routing part one"
 		  }) }}
     </div>  
 </div>
