--- a/app/views/v1/basic-routing-radio.html
+++ b/app/views/v1/basic-routing-radio.html
@@ -28,6 +28,10 @@ Basic routing - Do you like dogs?
 
 <div class="nhsuk-grid-row">
 	<div class="nhsuk-grid-column-two-thirds">
+		{{ backLink({
+			"href": "basic-routing",
+			"text": "Go back"
+		  }) }}
 		<form action="basic-routing-radio" method="post">
 			<div class="nhsuk-form-group">
 				<fieldset class="nhsuk-fieldset">
