--- a/app/views/v1/complex-finish.html
+++ b/app/views/v1/complex-finish.html
@@ -8,7 +8,7 @@
 
 <!-- Set the page title -->
 {% block pageTitle %}
-Like dogs
+Thank you - complex routing
 {% endblock %}
 
 <!-- For adding a breadcrumb -->
@@ -28,15 +28,17 @@ Like dogs
 
 <div class="nhsuk-grid-row">
 	<div class="nhsuk-grid-column-two-thirds">
-		{{ backLink({
-			"href": "basic-routing-radio",
-			"text": "Go back"
-		}) }}
 		<h1>
-			You like dogs
+			Thank you
 		</h1>
-		<p>Thank you for letting us know.</p>
-		<a href="basic-routing-part-two" class="nhsuk-button">Continue</a>
+
+        <p>Hello {{ data.name | default("Jane") | capitalize }},</p>
+
+        <p>Thank you for sharing your name with us.</p>
+
+        <a class="nhsuk-button" href="complex-routing-part-two" role="button">
+            Finish
+        </a>
     </div>  
 </div>
 {% endblock %}
