--- a/app/views/v1/clever-dog.html
+++ b/app/views/v1/clever-dog.html
@@ -8,7 +8,7 @@
 
 <!-- Set the page title -->
 {% block pageTitle %}
-Like dogs
+Clever dog - complex routing
 {% endblock %}
 
 <!-- For adding a breadcrumb -->
@@ -28,15 +28,20 @@ Like dogs
 
 <div class="nhsuk-grid-row">
 	<div class="nhsuk-grid-column-two-thirds">
-		{{ backLink({
-			"href": "basic-routing-radio",
+        {{ backLink({
+			"href": "complex-name",
 			"text": "Go back"
 		}) }}
+
 		<h1>
-			You like dogs
+			Wow, what a clever dog you are!
 		</h1>
-		<p>Thank you for letting us know.</p>
-		<a href="basic-routing-part-two" class="nhsuk-button">Continue</a>
+
+        <p>We didn't know dogs could enter their name.</p>
+
+        <a class="nhsuk-button" href="complex-finish" role="button">
+            Continue
+        </a>
     </div>  
 </div>
 {% endblock %}
