--- a/app/views/v1/basic-routing-part-two.html
+++ b/app/views/v1/basic-routing-part-two.html
@@ -42,7 +42,7 @@ Basic routing part two
 		</p>
 		<p>Here is the code snippet for the form:</p>
 
-		<img src="/images/routes-4.svg" alt="routes file example" class="nhsuk-u-margin-bottom-4">
+		<img src="/images/routes-4.svg" alt="routes file example" class="nhsuk-u-margin-bottom-4"/>
 
 		<p>Let's break that down further...</p>
 
@@ -56,7 +56,7 @@ Basic routing part two
 
 		<p>Now that we have our form set up, lets add some radio buttons:</p>
 
-		<img src="/images/routes-5.svg" alt="routes file example" class="nhsuk-u-margin-bottom-4">
+		<img src="/images/routes-5.svg" alt="routes file example" class="nhsuk-u-margin-bottom-4"/>
 
 		<p>You can grab the HTML / Nunjucks from the service manual, however we will need to tweak this to make it fit for purpose.</p>
 		<p>The obivous things are changing the <code>h1</code> to the question we want to ask etc. But the important things we need to look at are <code>name</code> attritbute on the inputs, <code>id</code> and <code>value</code> attributes.</p>
@@ -72,10 +72,10 @@ Basic routing part two
 
 		<p>The final piece of the puzzle before we move onto the routing is adding a submit button. We need this in order to post the data from the form.</p>
 		<p>The code for the button should look something like this:</p>
-		<img src="/images/routes-6.svg" alt="routes file example" class="nhsuk-u-margin-bottom-4">
+		<img src="/images/routes-6.svg" alt="routes file example" class="nhsuk-u-margin-bottom-4"/>
 		<p>The most important part of this block of code is ensuring that it has the type attribute set to <code>submit</code></p>
 		<p>And this block of code should live just before your closing <code>form</code> tag, with the overall thing now looking somthing like this:</p>
-		<img src="/images/routes-7.svg" alt="routes file example" class="nhsuk-u-margin-bottom-4">
+		<img src="/images/routes-7.svg" alt="routes file example" class="nhsuk-u-margin-bottom-4"/>
 		<p>Now our form is fully built - lets look at building out the routing.</p>
 
 		<h2>Step four</h2>
@@ -86,7 +86,7 @@ Basic routing part two
 		<p>An arrow function expression is a compact alternative to a traditional function expression, with some semantic differences.</p>
 		<p>Here is the snippet in full, before we break it down:</p>
 
-		<img src="/images/routes-8.svg" alt="routes file example" class="nhsuk-u-margin-bottom-4">
+		<img src="/images/routes-8.svg" alt="routes file example" class="nhsuk-u-margin-bottom-4"/>
 
 		<p>Let's break it down simply line by line.</p>
 
