--- a/app/views/v1/complex-routing.html
+++ b/app/views/v1/complex-routing.html
@@ -30,6 +30,7 @@ Complex routing
 	<div class="nhsuk-grid-column-two-thirds">
 		<h1>
 			Complex routing
+            <span class="nhsuk-caption-xl nhsuk-caption--bottom">Part 1 of 2</span>
 		</h1>
 		<p>For the next part of this tutorial, we will look at more complex routing using an text input component this time.</p>
         <p>Like we did previously on the 'basic journey' we will first show the journey, and then break down how we did it. You can use the following inputs to trigger the different journeys:</p>
